# ToDoList

./: README.md  alembic.ini  main.py  projects.py  pyproject.toml  tasks.py
app/: main.py  projects.py  tasks.py
app/cli/: console.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: session.py
app/exceptions/: service_exceptions.py
app/main/: main.py
app/models/: models.py
app/repositories/: __init__.py  repositories.py
app/services/: __init__.py  project_service.py  task_service.py
myapp/: env.py
myapp/versions/: 520e1abc6f5c_add_project_table.py  8af9c0b6a851_create_basic_tables_project_task.py
